--- a/games/doodlejump/index.html
+++ b/games/doodlejump/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" name="viewport"/>
-    <title>Doodle Jump</title>
+    <title>Not Doodle Jump</title>
     <link href="../../images/ico.ico" rel="shortcut icon">
 
     <style>
