--- a/apps/index.html
+++ b/apps/index.html
@@ -131,7 +131,7 @@
     <a href="etchasketch/index.html" target="_blank">
         <div class="button" style="background-image: url('../images/thumbnails/etchasketch.jpg');">
             <h2>etch a sketch</h2>
-            <p>create digital pixel drawings - mimicking the experience of an etch-a-sketch with quality of life features </p>
+            <p>create digital pixel drawings  </p>
         </div>
     </a>
 
